// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should return loader view (visible false) 1`] = `
<DocumentFragment>
  <div
    class="loader "
  >
    <img
      alt="loading..."
      height="30"
      src="loader.svg"
      width="30"
    />
  </div>
</DocumentFragment>
`;

exports[`Should return loader view (visible true) 1`] = `
<DocumentFragment>
  <div
    class="loader loader_visible"
  >
    <img
      alt="loading..."
      height="30"
      src="loader.svg"
      width="30"
    />
  </div>
</DocumentFragment>
`;
